--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <input
             class="search__input"
             type="text"
+            id="search"
             name="search"
             placeholder="Search Github username..."
           />
@@ -81,19 +82,19 @@
           </div>
           <div class="links__container">
             <img src="assets/icon-website.svg" alt="website icon" />
-            <a href="" target="_blank" class="links__text text-light website"
+            <a href="/" target="_blank" class="links__text text-light website"
               >https://github.blog</a
             >
           </div>
           <div class="links__container">
             <img src="assets/icon-twitter.svg" alt="twitter icon" />
-            <a target="_blank" class="links__text text-light twitter"
+            <a href="/" target="_blank" class="links__text text-light twitter"
               >Not Available</a
             >
           </div>
           <div class="links__container">
             <img src="assets/icon-company.svg" alt="company icon" />
-            <a target="_blank" class="links__text text-light company"
+            <a href="" target="_blank" class="links__text text-light company"
               >Not Available</a
             >
           </div>
