removed alt text from deco images,converted span tags to p tags and put input tag inside label

--- a/index.html
+++ b/index.html
@@ -18,24 +18,21 @@
         <h1 class="header__logo">devfinder</h1>
         <div class="header__container">
           <p class="header__theme-text">LIGHT</p>
-          <img
-            class="light header__theme-icon"
-            src="assets/icon-sun.svg"
-            alt="icon of the sun"
-          />
+          <img class="header__theme-icon" src="assets/icon-sun.svg" alt="" />
         </div>
       </header>
 
       <section class="search" role="search">
         <form class="search__form">
-          <label for="search"></label>
-          <input
-            class="search__input"
-            type="text"
-            id="search"
-            name="search"
-            placeholder="Search Github username..."
-          />
+          <label for="search">
+            <input
+              class="search__input"
+              type="text"
+              id="search"
+              name="search"
+              placeholder="Search Github username..."
+            />
+          </label>
           <button class="search__btn">Search</button>
           <img
             class="search__icon"
@@ -47,14 +44,10 @@
 
       <article class="profile">
         <header class="profile__header">
-          <img
-            class="profile__img"
-            src="https://avatars.githubusercontent.com/u/583231?v=4"
-            alt="github user profile image"
-          />
+          <img class="profile__img" src="" alt="github user profile image" />
           <div class="profile__info">
             <h2 class="profile__heading">The Octocat</h2>
-            <span class="profile__username">@octocat</span>
+            <p class="profile__username">@octocat</p>
             <p class="profile__date">Joined 25 Jan 2011</p>
           </div>
         </header>
@@ -63,37 +56,37 @@
           <div class="profile__stats">
             <div>
               <h3>Repos</h3>
-              <span class="profile__stats--style repos">8</span>
+              <p class="profile__stats--style repos">8</p>
             </div>
             <div>
               <h3>Followers</h3>
-              <span class="profile__stats--style followers">3938</span>
+              <p class="profile__stats--style followers">3938</p>
             </div>
             <div>
               <h3>Following</h3>
-              <span class="profile__stats--style following">9</span>
+              <p class="profile__stats--style following">9</p>
             </div>
           </div>
         </section>
         <footer class="links">
           <div class="links__container">
-            <img src="assets/icon-location.svg" alt="location icon" />
+            <img src="assets/icon-location.svg" alt="" />
             <p class="links__text text-light location">San Francisco</p>
           </div>
           <div class="links__container">
-            <img src="assets/icon-website.svg" alt="website icon" />
+            <img src="assets/icon-website.svg" alt="" />
             <a href="/" target="_blank" class="links__text text-light website"
               >https://github.blog</a
             >
           </div>
           <div class="links__container">
-            <img src="assets/icon-twitter.svg" alt="twitter icon" />
+            <img src="assets/icon-twitter.svg" alt="" />
             <a href="/" target="_blank" class="links__text text-light twitter"
               >Not Available</a
             >
           </div>
           <div class="links__container">
-            <img src="assets/icon-company.svg" alt="company icon" />
+            <img src="assets/icon-company.svg" alt="" />
             <a href="" target="_blank" class="links__text text-light company"
               >Not Available</a
             >
