--- a/index.html
+++ b/index.html
@@ -73,28 +73,23 @@
             <img src="assets/icon-location.svg" alt="" />
             <p class="links__text text-light location">San Francisco</p>
           </div>
-          <div class="links__container">
+          <div class="links__container website">
             <img src="assets/icon-website.svg" alt="" />
-            <a href="/" target="_blank" class="links__text text-light website"
+            <a href="/" target="_blank" class="links__text text-light"
               >https://github.blog</a
             >
           </div>
-          <div class="links__container">
+          <div class="links__container twitter">
             <img src="assets/icon-twitter.svg" alt="" />
-            <a href="/" target="_blank" class="links__text text-light twitter"
-              >Not Available</a
-            >
+            <p class="links__text text-light">Not Available</p>
           </div>
-          <div class="links__container">
+          <div class="links__container company">
             <img src="assets/icon-company.svg" alt="" />
-            <a href="" target="_blank" class="links__text text-light company"
-              >Not Available</a
-            >
+            <p class="links__text text-light">Not Available</p>
           </div>
         </footer>
       </article>
     </main>
   </body>
-  <!-- <script src="experiment.js"></script> -->
   <script src="app.js"></script>
 </html>
