content of header p and img tag left blank

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       sizes="32x32"
       href="./assets/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="styles/main.css" />
+    <link class="stylesheet" rel="stylesheet" href="styles/main.css" />
     <title>Frontend Mentor | GitHub user search app</title>
   </head>
   <body>
@@ -17,8 +17,8 @@
       <header class="header">
         <h1 class="header__logo">devfinder</h1>
         <div class="header__container">
-          <p class="header__theme-text">LIGHT</p>
-          <img class="header__theme-icon" src="assets/icon-sun.svg" alt="" />
+          <p class="header__theme-text"></p>
+          <img class="header__theme-icon" src="" alt="" />
         </div>
       </header>
 
